# openvino_tokenizers

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  __version__  check_tokenizer.ipynb  icu.patch  pass_rate_with_no_trunc.txt  pyproject.toml  repro_ltx_segfault.sh  requirements-build.txt  sudo  third-party-programs.txt
.agents/: openvino-tokenizers.agent.md
.agents/skills/openvino-tokenizers/: unknown-arch.md
.github/: dependabot.yml  dependency_review.yml  labeler.yml
.github/actions/find_wheel/: action.yml  package-lock.json  package.json
.github/actions/find_wheel/src/: index.js
.github/actions/find_wheel/tests/: index.test.js
.github/actions/install_poetry/: action.yml
.github/actions/install_uv/: action.yml
.github/actions/openvino_provider/: action.yml
.github/agents/: tokenizer-enablement.agent.md
.github/skills/tokenizer-checker/: SKILL.md
.github/skills/tokenizer-diagnostics/: SKILL.md
.github/skills/tokenizer-fix-python/: SKILL.md
.github/workflows/: coverity.yml  labeler.yml  linux.yml  mac.yml  manylinux_2_28.yml  sdl.yml  windows.yml
.py-build-cmake_cache/cp311-cp311-linux_x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest_openvino_tokenizers.txt  install_manifest_openvino_tokenizers_licenses.txt  install_manifest_openvino_tokenizers_python.txt  py-build-cmake-preload.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/core/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/decoders/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/models/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/normalizers/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/postprocessors/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/pretokenizers/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/test/: Makefile  cmake_install.cmake
.py-build-cmake_cache/cp311-cp311-linux_x86_64/src/fast_tokenizer/fast_tokenizer/utils/: Makefile  cmake_install.cmake
benchmark/: .gitignore  README.md  benchmark.py
cmake/: platforms.cmake  version.cmake  vs_version.cmake
cmake/modules/: FindICU.cmake
cmake/templates/: __version__.py.in
cpp/openvino_extension/: CMakeLists.txt
cpp/openvino_tokenizers/: CMakeLists.txt
js/: .npmignore  README.md  openvino-tokenizers.d.ts  openvino-tokenizers.js  package-lock.json  package.json
js/scripts/: download-runtime.js  download_runtime.js
js/tests/: openvino-tokenizers.test.js
python/openvino_extension/: __init__.py
python/openvino_tokenizers/: __init__.py  __main__.py  __version__.py  build_tokenizer.py  check_ltx_video.py  cli.py  constants.py  convert_tokenizer.py  extend_to_pair_of_inputs.py  hf_parser.py  str_pack.py  tiktoken_parser.py  tokenizer_pipeline.py  tokenizer_transformations.py  utils.py
python/openvino_tokenizers/cli_tools/: __init__.py  check_normalization.py  check_tokenizer.py  convert_tokenizer.py  diagnose_tokenizer.py  main.py
python/tests/: smoke.py
src/: CMakeLists.txt  bpe_tokenizer.cpp  bpe_tokenizer.hpp  byte_fallback.cpp  byte_fallback.hpp  bytes_to_chars.cpp  bytes_to_chars.hpp  case_fold.cpp  case_fold.hpp  chars_to_bytes.cpp  chars_to_bytes.hpp  charsmap_normalization.cpp  charsmap_normalization.hpp  combine_segments.cpp  combine_segments.hpp  contrib_string_ops.cpp  contrib_string_ops.hpp  equal_str.cpp  equal_str.hpp  fast_tokenizers.patch  fuze.cpp  fuze.hpp  generate_precompiled_charsmap.cpp  glog.patch  icu4c.patch  icu_filter_en.json  normalize_unicode.cpp  normalize_unicode.hpp  numeric_to_string.cpp  numeric_to_string.hpp  onnx_translators.cpp  onnx_translators.hpp  ov_extension.cpp  ragged_tensor_pack.cpp  ragged_tensor_pack.hpp  ragged_to_dense.cpp  ragged_to_dense.hpp  ragged_to_ragged.cpp  ragged_to_ragged.hpp  ragged_to_sparse.cpp  (+36 more)
src/patches/: fast_tokenizers.patch  gflags.patch  glog.patch  icu.patch
src/python/openvino_genai/: __init__.pyi
tests/: conftest.py  layer_tests.py  onnx_contrib_test.py  pass_rates.json  requirements.txt  test_tf_translators.py  tokenizer_differential_fuzzing.py  tokenizers_test.py  utils.py
